# ganx

./: README.md  config.yaml  pyproject.toml
ganx/: datasets.py  modules.py  trainer.py  wgan.py
ganx/cli/: train.py
tests/: test_ganx.py
